fixed checkbox vertical alignment

--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,7 @@ form ul {
   display: inline-block;
   margin-right: 20px;
   margin-top: 0;
+  vertical-align: top;
 }
 
 input {
